#992 closed bug (fixed)
netinet/in.h doesn't declare IPPROTO_* as macros
Reported by: | mmu_man | Owned by: | sikosis |
---|---|---|---|
Priority: | normal | Milestone: | |
Component: | Network & Internet/IPv4 | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
http://www.opengroup.org/onlinepubs/007908799/xns/netinetin.h.html
"The <netinet/in.h> header defines the following macros for use as values of the level argument of getsockopt() and setsockopt():"
Besides, I often use #if (IPPROTO_TCP != 6) to test for net_server, but that test fails for Haiku.
Note:
See TracTickets
for help on using tickets.
Feel free to change it. I didn't "update" this header yet, it's still the one from our previous networking stack, and might not follow OpenGroup/POSIX yet.