Change IPPROTO_* from enum to #defines. This fixes #992.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19955 a95241bf-73f2-0310-859d-f6bbb57e9c96